--- a/assets/css/pages/statistics.scss
+++ b/assets/css/pages/statistics.scss
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,800&display=swap');
 
+#stats-banner-heading{
+    color: white;
+    position: absolute;
+    bottom: 47%;
+}
+
 .chartText {
     color: $black;
 }
@@ -17,17 +23,13 @@
 .death-seconds {
     text-align: center;
     color: $black;
-    font-weight: 600;
 }
 
 .row-flex {
-    display: flex;
-    justify-content: center;
+    text-align: center;
     padding: 20px 0;
     margin-bottom: 30px;
     background-color: $noticeYellow;
-    font-size: 20px;
-    font-weight: 700;
 }
 
 .notice-text {
@@ -40,39 +42,36 @@
 
 #statsBox {
     width: 100%;
-    height: 200px;
+    height: 350px;
+    margin: 60px 0;
     background-image: url(../images/african-orphan.jpg), linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(1, 1, 1, 0), rgba(0, 0, 0, 0.5));
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
     display: flex;
+    align-items: flex-end;
     justify-content: center;
 }
 
 .theCounters {
     color: $white;
     text-align: center;
-    position: absolute;
     display: flex;
-}
-
-#counterStats {
-    font-size: 18px;
 }
 
 #deathStats {
     padding: 5px;
-    font-size: 18px;
 }
 
 .red-count-statistics {
     color: red;
-    font-weight: 600;
-    font-size: 27px;
 }
 
 .blue-seconds-statistics {
     color: blue;
-    font-weight: 600;
+}
+
+.stats-padding-bottom {
+    padding-bottom: 50px;
 }
