--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,6 @@
 
 .hpimg-5 {
   width: 100%;
-  top: 40px;
   height: 97vh;
   background-image: url("../images/sadness-africa.jpg");
   background-position: right; }
@@ -253,10 +252,12 @@
   transition: 0.2s;
   color: #007bff !important; }
 
+p {
+  font-size: 16px; }
+
 #footer {
   width: 100%;
   height: 300px;
-  margin-top: 58px;
   padding: 30px 0;
   background-color: #FFFFFF;
   position: static; }
@@ -327,7 +328,6 @@
   color: #FFFFFF; }
 
 .sideCalculator {
-  transform: translateY(-50%);
   background-color: #663399;
   color: white; }
 
@@ -362,7 +362,6 @@
 
 .charity-collapse:after {
   content: '\02795';
-  font-size: 15px;
   float: right;
   margin-left: 5px; }
 
@@ -383,51 +382,30 @@ body {
 
 .red-count {
   color: red;
-  font-weight: 600;
-  font-size: 27px; }
+  font-weight: 600; }
 
 .blue-seconds {
-  color: blue;
-  font-weight: 600; }
+  color: blue; }
 
 .top-section {
   padding: 1em 0.5em 0; }
 
 .top-section-counter-BG {
   background-color: rgba(225, 0, 0, 0.3);
-  border: 2px solid;
   color: #FFFFFF;
   position: relative; }
 
-.header {
-  font-weight: 800; }
-
 .headerGDP {
   color: #FFFFFF;
-  top: 7px;
-  font-weight: 800; }
-
-.textHP1 {
-  font-weight: 600; }
+  top: 7px; }
 
 .textHP2 {
-  color: #FFFFFF;
-  font-weight: 600; }
-
-.text2 {
-  font-size: 1em;
-  font-weight: 600; }
-
-.text2 {
-  font-size: 1em;
-  font-weight: 600; }
+  color: #FFFFFF; }
 
 .textGDP {
-  font-size: 1em;
   top: 82px;
   padding-right: 10px;
-  color: #FFFFFF;
-  font-weight: 600; }
+  color: #FFFFFF; }
 
 .MotherTeresaQuote {
   top: 115px;
@@ -440,6 +418,11 @@ body {
 
 .underline {
   text-decoration: underline; }
+
+#stats-banner-heading {
+  color: white;
+  position: absolute;
+  bottom: 47%; }
 
 .chartText {
   color: #000000; }
@@ -454,17 +437,13 @@ body {
 
 .death-seconds {
   text-align: center;
-  color: #000000;
-  font-weight: 600; }
+  color: #000000; }
 
 .row-flex {
-  display: flex;
-  justify-content: center;
+  text-align: center;
   padding: 20px 0;
   margin-bottom: 30px;
-  background-color: #ffff8a;
-  font-size: 20px;
-  font-weight: 700; }
+  background-color: #ffff8a; }
 
 .notice-text {
   margin: 0; }
@@ -474,36 +453,33 @@ body {
 
 #statsBox {
   width: 100%;
-  height: 200px;
+  height: 350px;
+  margin: 60px 0;
   background-image: url(../images/african-orphan.jpg), linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(1, 1, 1, 0), rgba(0, 0, 0, 0.5));
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
   display: flex;
+  align-items: flex-end;
   justify-content: center; }
 
 .theCounters {
   color: #FFFFFF;
   text-align: center;
-  position: absolute;
   display: flex; }
 
-#counterStats {
-  font-size: 18px; }
-
 #deathStats {
-  padding: 5px;
-  font-size: 18px; }
+  padding: 5px; }
 
 .red-count-statistics {
-  color: red;
-  font-weight: 600;
-  font-size: 27px; }
+  color: red; }
 
 .blue-seconds-statistics {
-  color: blue;
-  font-weight: 600; }
+  color: blue; }
+
+.stats-padding-bottom {
+  padding-bottom: 50px; }
 
 #map {
   height: 100vh;
@@ -543,13 +519,20 @@ body {
   list-style: none;
   padding: 0px; }
 
-.header2 {
-  font-weight: 600; }
+.contact-cta {
+  height: 60vh;
+  background-image: url("../images/sadness-africa.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: right;
+  background-attachment: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
 
 @media (min-width: 576px) {
   /*Homepage*/
   .textHP1 {
-    font-size: 26px;
     margin-left: 36px;
     margin-top: 36px;
     padding-left: 10px; }
@@ -564,21 +547,13 @@ body {
     position: relative;
     top: 56px; }
 
-  .text {
-    font-size: 26px; }
-
-  .text2 {
-    font-size: 26px; }
-
   .textGDP {
-    font-size: 26px;
     padding-top: 0%;
     position: relative;
     padding-right: 10px;
     color: #FFFFFF; }
 
   .donateButtonStyleHP {
-    font-size: 25px;
     height: 49px; }
 
   .MotherTeresaQuote {
@@ -593,10 +568,25 @@ body {
     padding-top: 17%; }
 
   .chartText {
-    margin-left: 10%; }
+    margin: 0 10%;
+    text-align: center; }
 
-  #statistics-article {
-    padding-left: 50px; }
+  .chartStyling {
+    background-color: #FFFFFF;
+    margin: 70px 0px 70px 0px;
+    padding: 40px 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+
+  .heading-margin {
+    margin-left: 230px; }
+
+  .chart-margin {
+    margin-left: 230px; }
+
+  .social-media-button a, .social-media-button div {
+    transform: translateX(-15px); }
 
   .social-media-button {
     width: 5.5%; }
@@ -614,6 +604,18 @@ body {
   #submitBtn {
     right: 8em; } }
 @media (min-width: 768px) {
+  h1 {
+    font-size: 50px; }
+
+  h2 {
+    font-size: 35px; }
+
+  h3 {
+    font-size: 25px; }
+
+  p {
+    font-size: 22px; }
+
   /*Homepage*/
   .hpimg-1 {
     padding: 164px 0; }
@@ -631,13 +633,9 @@ body {
     margin-top: 9px; }
 
   .text {
-    font-size: 26px;
     margin-top: 5%;
     padding-right: 10px;
     position: relative; }
-
-  .text2 {
-    font-size: 26px; }
 
   .section1 {
     bottom: 20px;
@@ -645,7 +643,6 @@ body {
     position: relative; }
 
   .textGDP {
-    font-size: 26px;
     padding-right: 10px;
     position: relative;
     color: #FFFFFF; }
@@ -656,28 +653,17 @@ body {
     top: 156px;
     padding-bottom: 197px; }
 
-  .chartText {
-    text-align: center; }
-
-  .chartStyling {
-    background-color: #FFFFFF;
-    margin: 7% 0;
-    padding: 40px 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center; }
-
   .graph-color {
     color: #000000; }
 
   #statsBox {
-    height: 300px; }
+    height: 500px; }
 
-  #counterStats {
-    font-size: 27px; }
+  .heading-margin {
+    margin-left: 0; }
 
-  #deathStats {
-    font-size: 27px; }
+  .chart-margin {
+    margin-left: 0px; }
 
   .row-flex {
     margin-bottom: 0; }
@@ -696,21 +682,47 @@ body {
     list-style: none; }
 
   .social-media-button a, .social-media-button div {
-    transform: translateX(-77px); }
+    transform: translateX(-90px); }
 
   .social-media-button {
     padding-left: 40px !important;
     left: 0; } }
 @media (min-width: 992px) {
+  p {
+    font-size: 18px; }
+
   .hpimg-1 {
     padding: 100px 0 350px 0; }
 
   .mapInstruction {
     padding-top: 13%; }
 
+  .stats-banner-text {
+    font-size: 26px; }
+
   div.dc-chart {
     float: none;
-    text-align: center; } }
+    text-align: center; }
+
+  .sideCalculator:hover {
+    background-color: rgba(102, 51, 153, 0.8);
+    transform: translateX(-20px); }
+
+  .facebook:hover {
+    background-color: rgba(59, 89, 152, 0.8);
+    transform: translateX(-20px); }
+
+  .twitter:hover {
+    background-color: rgba(85, 172, 238, 0.8);
+    transform: translateX(-20px); }
+
+  .instagram:hover {
+    background-color: rgba(253, 89, 73, 0.8);
+    transform: translateX(-20px); }
+
+  .youtube:hover {
+    background-color: rgba(187, 0, 0, 0.8);
+    transform: translateX(-20px); } }
 @media (min-width: 1200px) {
   .top-section-counter-BG {
     padding-right: 29px; }
@@ -731,67 +743,25 @@ body {
   .hpimg-4 {
     height: 1000px; }
 
-  .text {
-    font-size: 28px; }
-
-  .text2 {
-    font-size: 28px; }
-
-  .textGDP {
-    font-size: 28px; }
-
   .textHP1 {
-    padding-left: 40px;
-    font-size: 26px; }
+    padding-left: 40px; }
 
   .section,
   .section2,
   .section3 {
     margin-left: 40px; }
 
+  .social-media-button a, .social-media-button div {
+    transform: translateX(-53px); }
+
   .social-media-button {
     left: -35px; }
-
-  .sideCalculator:hover {
-    background-color: rgba(102, 51, 153, 0.8);
-    transform: translateX(23px) translateY(-50%); }
-
-  .social-media-button a, .social-media-button div {
-    transform: translateX(-48px); }
-
-  .facebook:hover {
-    background-color: rgba(59, 89, 152, 0.8);
-    transform: translateX(-20px); }
-
-  .twitter:hover {
-    background-color: rgba(85, 172, 238, 0.8);
-    transform: translateX(-20px); }
-
-  .instagram:hover {
-    background-color: rgba(253, 89, 73, 0.8);
-    transform: translateX(-20px); }
-
-  .youtube:hover {
-    background-color: rgba(187, 0, 0, 0.8);
-    transform: translateX(-20px); }
-
-  #statistics-article {
-    padding-right: 50px; }
-
-  .theCounters {
-    top: 0%; }
 
   #statsBox {
     height: 600px; }
 
-  #counterStats {
-    font-size: 62px; }
-
-  #deathStats {
-    font-size: 62px; }
-
-  .red-count-statistics {
-    font-size: 65px; }
+  .stats-banner-text {
+    font-size: 30px; }
 
   .text-box-length {
     width: 780px; }
