--- a/assets/css/pages/homepage.scss
+++ b/assets/css/pages/homepage.scss
@@ -27,24 +27,24 @@ body {
 }
 
 .headerGDP {
-    color: $white;
+    color: $black;
     top: 7px;
 }
 
 .textHP2 {
-    color: $white;
+    color: $black;
 }
 
 .textGDP {
     top: 82px;
     padding-right: 10px;
-    color: $white;
+    color: $black;
 }
 
 .MotherTeresaQuote {
     top: 115px;
     text-transform: uppercase;
-    color: $white;
+    color: $black;
     font-style: italic;
 }
 
