--- a/assets/css/pages/statistics.scss
+++ b/assets/css/pages/statistics.scss
@@ -2,8 +2,8 @@
 
 #stats-banner-heading{
     color: white;
-    position: absolute;
     bottom: 47%;
+    text-align: center;
 }
 
 .chartText {
@@ -22,7 +22,7 @@
 
 .death-seconds {
     text-align: center;
-    color: $black;
+    color: $white;
 }
 
 .row-flex {
