--- a/assets/css/helpers/helpers.scss
+++ b/assets/css/helpers/helpers.scss
@@ -44,8 +44,7 @@
     margin: 15px 0;
     padding: 1em 0;
     position: relative;
-    color: white;
-    background-color: rgba(0, 0, 0, 0.3);
+    color: $black;
     height: auto;
 }
 
