--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,22 +7,22 @@
   width: 100%;
   top: 40px;
   height: auto;
-  background-image: linear-gradient(to right, rgba(1, 1, 1, 0.2), rgba(1, 1, 1, 0), rgba(1, 1, 1, 0.2)), url("../images/sadness-africa.jpg");
+  background-image: linear-gradient(to right, rgba(240, 255, 255, 0.7), rgba(1, 1, 1, 0.2)), url("../images/sadness-africa.jpg");
   padding: 60px 0;
-  background-position: right;
+  background-position: 73%;
   background-size: cover; }
 
 .hpimg-2 {
   width: 100%;
   height: 900px;
-  background-image: linear-gradient(to right, rgba(1, 1, 1, 0.4), rgba(1, 1, 1, 0), rgba(1, 1, 1, 0.4)), url("../images/starvation.jpg");
+  background-image: linear-gradient(to right, rgba(240, 251, 255, 0.7), rgba(240, 251, 255, 0.4), rgba(240, 251, 255, 0.7)), url("../images/starvation.jpg");
   top: 40px;
   background-position: center; }
 
 .hpimg-3 {
   width: 100%;
   height: 900px;
-  background-image: url("../images/Starving -African-Child.jpg");
+  background-image: linear-gradient(to right, rgba(240, 251, 255, 0.5), rgba(240, 251, 255, 0.3), rgba(240, 251, 255, 0.5)), url("../images/Starving -African-Child.jpg");
   top: 40px;
   background-position: center;
   background-size: cover; }
@@ -30,14 +30,14 @@
 .hpimg-4 {
   width: 100%;
   height: 775px;
-  background-image: linear-gradient(to right, rgba(1, 1, 1, 0.2), rgba(1, 1, 1, 0), rgba(1, 1, 1, 0.2)), url("../images/india-kids.jpg");
+  background-image: linear-gradient(to right, rgba(240, 251, 255, 0.7), rgba(240, 251, 255, 0.3), rgba(240, 251, 255, 0.7)), url("../images/india-kids.jpg");
   top: 40px;
   background-position: center; }
 
 .hpimg-5 {
   width: 100%;
   height: 97vh;
-  background-image: url("../images/sadness-africa.jpg");
+  background-image: linear-gradient(to right, rgba(240, 255, 255, 0.7), rgba(1, 1, 1, 0.2)), url("../images/sadness-africa.jpg");
   background-position: right; }
 
 /*Homepage*/
@@ -60,8 +60,7 @@
   margin: 15px 0;
   padding: 1em 0;
   position: relative;
-  color: white;
-  background-color: rgba(0, 0, 0, 0.3);
+  color: #000000;
   height: auto; }
 
 /*Charity Page*/
@@ -396,21 +395,21 @@ body {
   position: relative; }
 
 .headerGDP {
-  color: #FFFFFF;
+  color: #000000;
   top: 7px; }
 
 .textHP2 {
-  color: #FFFFFF; }
+  color: #000000; }
 
 .textGDP {
   top: 82px;
   padding-right: 10px;
-  color: #FFFFFF; }
+  color: #000000; }
 
 .MotherTeresaQuote {
   top: 115px;
   text-transform: uppercase;
-  color: #FFFFFF;
+  color: #000000;
   font-style: italic; }
 
 .more {
@@ -421,8 +420,8 @@ body {
 
 #stats-banner-heading {
   color: white;
-  position: absolute;
-  bottom: 47%; }
+  bottom: 47%;
+  text-align: center; }
 
 .chartText {
   color: #000000; }
@@ -437,7 +436,7 @@ body {
 
 .death-seconds {
   text-align: center;
-  color: #000000; }
+  color: #FFFFFF; }
 
 .row-flex {
   text-align: center;
@@ -485,7 +484,8 @@ body {
   height: 100vh;
   width: 100%;
   top: 40px;
-  margin-top: -40px; }
+  margin-top: -40px;
+  margin-bottom: 40px; }
 
 .mapInstruction {
   padding-top: 25%;
@@ -543,15 +543,13 @@ body {
     margin-left: 44px; }
 
   .headerGDP {
-    color: #FFFFFF;
     position: relative;
     top: 56px; }
 
   .textGDP {
     padding-top: 0%;
     position: relative;
-    padding-right: 10px;
-    color: #FFFFFF; }
+    padding-right: 10px; }
 
   .donateButtonStyleHP {
     height: 49px; }
@@ -560,7 +558,6 @@ body {
     top: 75px;
     font-size: 20px;
     text-transform: uppercase;
-    color: #FFFFFF;
     position: relative;
     padding-bottom: 37px; }
 
@@ -643,9 +640,7 @@ body {
     position: relative; }
 
   .textGDP {
-    padding-right: 10px;
-    position: relative;
-    color: #FFFFFF; }
+    position: relative; }
 
   .MotherTeresaQuote {
     font-size: 26px;
@@ -728,7 +723,7 @@ body {
     padding-right: 29px; }
 
   .hpimg-1 {
-    padding: 120px 0; }
+    padding: 200px 0; }
 
   .hpimg-2 {
     width: 100%;
