Improved some codes and corrected some of the text in the README.md file.

--- a/assets/css/helpers/variables.scss
+++ b/assets/css/helpers/variables.scss
@@ -10,8 +10,8 @@ $lightYellow: #FEF9B4;
 $noticeYellow: rgb(255, 255, 138);
 $grey: rgb(224,224,224);
 $red: #FE7979;
-$buttonBG: linear-gradient(#17a2b8, #01557b);
-$buttonHoverBG:  linear-gradient(#1ebfd8, #0075ac);
+$buttonBG: linear-gradient(rgba(97, 255, 242, 0.7), rgba(57, 149, 156, 0.7));
+$buttonHoverBG: linear-gradient(#61fff2, #39959c);
 
 $counterBG: rgba(225, 0, 0, 0.3);
 
