--- a/assets/css/pages/contact.scss
+++ b/assets/css/pages/contact.scss
@@ -21,7 +21,7 @@
 .contactWrap {
     margin-top: 100px;
     margin-bottom: 50px;
-    padding: 40px 0px;
+    padding: 20px 0px 70px 0px;
     background-color: #FFFFFF;
     width: 80%;
 }
