--- a/assets/css/pages/statistics.scss
+++ b/assets/css/pages/statistics.scss
@@ -44,7 +44,7 @@
     width: 100%;
     height: 350px;
     margin: 60px 0;
-    background-image: url(../images/african-orphan.jpg), linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(1, 1, 1, 0), rgba(0, 0, 0, 0.5));
+    background-image: url(../images/Statistics-Images/african-orphan.jpg), linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(1, 1, 1, 0), rgba(0, 0, 0, 0.5));
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
