--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -133,23 +133,23 @@
   font-size: 20px;
   border: none;
   border-radius: 10px;
-  background-image: linear-gradient(#17a2b8, #01557b);
+  background-image: linear-gradient(rgba(97, 255, 242, 0.7), rgba(57, 149, 156, 0.7));
   color: #FFFFFF;
   margin: 5% 0;
   font-weight: 600; }
 
 .donateButtonStyleHP:hover {
   color: #FFFFFF;
-  background-image: linear-gradient(#1ebfd8, #0075ac); }
+  background-image: linear-gradient(#61fff2, #39959c); }
 
 .readBtn {
-  background-image: linear-gradient(#17a2b8, #01557b);
+  background-image: linear-gradient(rgba(97, 255, 242, 0.7), rgba(57, 149, 156, 0.7));
   color: white;
   border: none;
   font-weight: 600; }
 
 .readBtn:hover {
-  background-image: linear-gradient(#1ebfd8, #0075ac); }
+  background-image: linear-gradient(#61fff2, #39959c); }
 
 .charity-collapse {
   width: 100%;
@@ -454,7 +454,7 @@ body {
   width: 100%;
   height: 350px;
   margin: 60px 0;
-  background-image: url(../images/african-orphan.jpg), linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(1, 1, 1, 0), rgba(0, 0, 0, 0.5));
+  background-image: url(../images/Statistics-Images/african-orphan.jpg), linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(1, 1, 1, 0), rgba(0, 0, 0, 0.5));
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -508,7 +508,7 @@ body {
 .contactWrap {
   margin-top: 100px;
   margin-bottom: 50px;
-  padding: 40px 0px;
+  padding: 20px 0px 70px 0px;
   background-color: #FFFFFF;
   width: 80%; }
 
