--- a/assets/css/pages/statistics.scss
+++ b/assets/css/pages/statistics.scss
@@ -25,9 +25,27 @@
     color: $white;
 }
 
+.closing-button-wrapper {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.closing-button {
+    width: 20px;
+    cursor: pointer;
+}
+
+.closing-button:hover{
+    background-color: rgba(255, 255, 255, 0.7)
+}
+
+.closing-button:active{
+    background-color: rgba(255, 255, 255, 0.5)
+}
+
 .row-flex {
     text-align: center;
-    padding: 20px 0;
+    padding: 20px;
     margin-bottom: 30px;
     background-color: $noticeYellow;
 }
