--- a/assets/css/pages/contact.scss
+++ b/assets/css/pages/contact.scss
@@ -15,7 +15,11 @@
 }
 
 .formsSubmit {
-    margin: 10px 44%;
+    margin: 10px 0;
+    width: 100%;
+    height: 30px;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .contactWrap {
