--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,13 +164,13 @@
   background-color: #0188FE; }
 
 .donateButtonStyle {
-  background-color: #8ffe00;
+  background-image: linear-gradient(rgba(97, 255, 242, 0.7), rgba(57, 149, 156, 0.7));
   margin-bottom: 10px;
   color: #FFFFFF;
   transition: 0.2s ease-in-out; }
 
 .donateButtonStyle:hover {
-  background-color: #11fe00;
+  background-image: linear-gradient(#61fff2, #39959c);
   color: #FFFFFF; }
 
 #calculator-wrapper {
@@ -527,7 +527,11 @@ body {
   width: 100%; }
 
 .formsSubmit {
-  margin: 10px 44%; }
+  margin: 10px 0;
+  width: 100%;
+  height: 30px;
+  display: flex;
+  justify-content: flex-end; }
 
 .contactWrap {
   margin-top: 100px;
