--- a/assets/css/pages/contact.scss
+++ b/assets/css/pages/contact.scss
@@ -19,7 +19,7 @@
     width: 100%;
     height: 30px;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
 }
 
 .contactWrap {
