--- a/assets/css/components/footer.scss
+++ b/assets/css/components/footer.scss
@@ -13,7 +13,7 @@
 }
 
 .footer-link {
-  color: #000000;
+  color: $black;
   text-decoration: none;
 }
 
@@ -32,5 +32,5 @@
 }
 
 .facebook-footer {
-  color: white;
+  color: $white;
 }
