--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,14 +15,14 @@
 .hpimg-2 {
   width: 100%;
   height: 900px;
-  background-image: linear-gradient(to right, rgba(240, 251, 255, 0.7), rgba(240, 251, 255, 0.4), rgba(240, 251, 255, 0.7)), url("../images/starvation.jpg");
+  background-image: linear-gradient(to right, rgba(240, 251, 255, 0.7), rgba(240, 251, 255, 0.4), rgba(240, 251, 255, 0.7)), url("../images/india-kids.jpg");
   top: 40px;
   background-position: center; }
 
 .hpimg-3 {
   width: 100%;
   height: 900px;
-  background-image: linear-gradient(to right, rgba(240, 251, 255, 0.5), rgba(240, 251, 255, 0.3), rgba(240, 251, 255, 0.5)), url("../images/Starving -African-Child.jpg");
+  background-image: linear-gradient(to right, rgba(240, 251, 255, 0.5), rgba(240, 251, 255, 0.3), rgba(240, 251, 255, 0.5)), url("../images/starvation.jpg");
   top: 40px;
   background-position: center;
   background-size: cover; }
@@ -30,7 +30,7 @@
 .hpimg-4 {
   width: 100%;
   height: 775px;
-  background-image: linear-gradient(to right, rgba(240, 251, 255, 0.7), rgba(240, 251, 255, 0.3), rgba(240, 251, 255, 0.7)), url("../images/india-kids.jpg");
+  background-image: linear-gradient(to right, rgba(240, 251, 255, 0.7), rgba(240, 251, 255, 0.3), rgba(240, 251, 255, 0.7)), url("../images/Starving -African-Child.jpg");
   top: 40px;
   background-position: center; }
 
@@ -131,7 +131,7 @@
 
 .readBtn {
   background-image: linear-gradient(rgba(97, 255, 242, 0.7), rgba(57, 149, 156, 0.7));
-  color: white;
+  color: #FFFFFF;
   border: none;
   font-weight: 600; }
 
@@ -186,7 +186,7 @@
   width: 100%;
   font-size: 1.5rem;
   background: #292938;
-  color: white;
+  color: #FFFFFF;
   border: none; }
 
 .calc-no-padding {
@@ -268,7 +268,7 @@
   margin-top: 4px; }
 
 .facebook-footer {
-  color: white; }
+  color: #FFFFFF; }
 
 /* Fixed Icon */
 .social-media-button {
@@ -395,9 +395,6 @@ body {
   margin-top: 3%;
   padding-right: 10px; }
 
-.textHP2 {
-  color: #000000; }
-
 .MotherTeresaQuote {
   text-transform: uppercase;
   color: #000000;
@@ -405,9 +402,6 @@ body {
 
 .more {
   display: none; }
-
-.underline {
-  text-decoration: underline; }
 
 #stats-banner-heading {
   color: white;
@@ -584,10 +578,7 @@ body {
 
   .text-box-length {
     width: 300px;
-    margin-left: 5px; }
-
-  .textHP2 {
-    text-align: center; } }
+    margin-left: 5px; } }
 @media (min-width: 768px) {
   h1 {
     font-size: 50px; }
