Improved some CSS code for the 'Contact' page and added the wireframes for this project into the 'Mockups' folder.

--- a/assets/css/pages/contact.scss
+++ b/assets/css/pages/contact.scss
@@ -46,6 +46,7 @@
     background-size: cover;
     background-position: right;
     background-attachment: fixed;
+    padding: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
